# ShortUrls

./: .gitignore  README.md  link_table.py  pyproject.toml  requirements.txt  test.py  web_interface.py
static/: fontdetect.js  grab.js  plugindetect.js  redirect.html  sha256.js
static/css/: index.css  json-viewer.css  styles.min.css
static/js/: crc32.js  index.js  map.js  script.min.js
templates/: index.html  redirect.html
