[tool.poetry]
name = "shorturls"
version = "0.1.0"
description = ""
authors = ["Pop101 <leon@leibmann.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
waitress = "^1.4.4"
maxminddb-geolite2 = "^2018.703"
APScheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
